# AgentX-Hackathon

./: .gitignore  MULTI_DIALECT_DESIGN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WORK_DIVISION.md  agent_cli.py  agent_server.py  agent_web.html  complex_benchmarks.sql  decomposition_results.json  demo.py  docker-compose.yml  fixed_decomposition.py  generate_truth.py  gold_queries.json  gold_queries.sql  hallucination.py  init.sql  pyproject.toml  query_decomposition.py  requirements.txt  run_benchmark.py  run_evaluation_pipeline.py  schema.py  seed_complex_data.py  seed_complex_data.sql  simple_decomposition.py  sql_agent.py  test_a2a.py  test_enhanced_scoring.py  test_evaluation_pipeline.py  test_hallucination.py  test_multi_dialect.py  test_with_db.py
a2a/: __init__.py  client.py  models.py  server.py
evaluation/: advanced_scoring.py  enhanced_scorer.py
src/agentx/: __init__.py  logging.py
src/agentx/core/: __init__.py  config.py  models.py
src/agentx/dialects/: __init__.py  registry.py
src/agentx/executor/: __init__.py  sql_executor.py
src/agentx/infrastructure/: __init__.py  database.py  database_manager.py  fixture_loader.py  models.py  schema_inspector.py
src/agentx/validation/: __init__.py  hallucination.py  sql_parser.py
tasks/gold_queries/sqlite/: basic_queries.json
tests/unit/infrastructure/: test_database_manager.py  test_fixture_loader.py  test_schema_inspector.py
